1st item complete

--- a/index.html
+++ b/index.html
@@ -36,17 +36,18 @@
                         <div class="input-group number-spinner">
 
                            <!-- icon btn minus 1 -->
-                           <button class="btn btn-default"><i class="fas fa-minus"></i></button>
+                           <button class="btn btn-default"><i id="btn-minus-1" class="fas fa-minus"></i></button>
 
                            <!-- quantity 1 -->
-                           <input type="text" class="form-control text-center" value="1">
+                           <input type="text" id="input-txt-1" class="form-control text-center" value="1">
 
                            <!-- icon btn plus 1 -->
-                           <button class="btn btn-default"><i class="fas fa-plus"></i></button>
+                           <button class="btn btn-default"><i id="btn-plus-1" class="fas fa-plus"></i></button>
                         </div>
 
                         <!-- price 1 -->
-                        <h5>$1219</h5>
+                        <h5>$<span id="price-item-1">1219</span></h5>
+                        
 
                         <!-- remove icon 1 -->
                         <img src="images/remove.png" alt="" class="remove-item">
