--- a/index.html
+++ b/index.html
@@ -77,18 +77,20 @@
                         <div class="input-group number-spinner">
 
                            <!-- icon btn minus 2 -->
-                           <button class="btn btn-default"><i class="fas fa-minus"></i></button>
+
+                           <button class="btn btn-default"><i id="btn-minus-2" class="fas fa-minus"></i></button>
 
                            <!-- quantity 2 -->
-                           <input type="text" class="form-control text-center" value="1">
+                           <input type="text" id="input-txt-2" class="form-control text-center" value="1">
 
                            <!-- icon btn plus 2 -->
-                           <button class="btn btn-default"><i class="fas fa-plus"></i></button>
+                           <button class="btn btn-default"><i id="btn-plus-2" class="fas fa-plus"></i></button>
 
                         </div>
 
                         <!-- price 2 -->
-                        <h5>$59</h5>
+                        <h5>$<span id="price-item-2">59</span></h5>
+                        
 
                         <!-- remove icon 2 -->
                         <img src="images/remove.png" alt="" class="remove-item">
