Total Cost Section is  Done

--- a/index.html
+++ b/index.html
@@ -113,13 +113,13 @@
                      <div class="col-md-4 status">
 
                         <!-- Subtotal -->
-                        <h5>$1,278</h5>
+                        <h5 >$<span id="subtotal">0</span></h5>
 
                         <!-- Tax -->
-                        <h5>$0</h5>
+                        <h5>$<span id="tax">0</span></h5>
 
                         <!-- Total -->
-                        <h5>$1,278</h5>
+                        <h5>$<span id="total">0</span></h5>
                      </div>
                   </div>
                </div>
