--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <div class="col-md-12 col-lg-10 mx-auto">
 
                <!-- 1st item  iPhone -->
-               <div class="cart-item">
+               <div id="row-item-1" class="cart-item">
 
                   <!-- this is working row 1 -->
                   <div class="row">
@@ -50,7 +50,7 @@
                         
 
                         <!-- remove icon 1 -->
-                        <img src="images/remove.png" alt="" class="remove-item">
+                        <img id="remove-item-1" src="images/remove.png" alt="" class="remove-item">
                      </div>
                   </div>
                </div>
@@ -58,7 +58,7 @@
 
 
                <!-- 2nd item Phone Cover -->
-               <div class="cart-item">
+               <div id="row-item-2" class="cart-item">
 
                   <!-- this is working row 2 -->
                   <div class="row">
@@ -93,7 +93,7 @@
                         
 
                         <!-- remove icon 2 -->
-                        <img src="images/remove.png" alt="" class="remove-item">
+                        <img id="remove-item-2" src="images/remove.png" alt="" class="remove-item">
                      </div>
                   </div>
                </div>
